--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./style/all.min.css" />
-        <link rel="stylesheet" href="./style/normalize.css" />
-        <link rel="stylesheet" href="./style/main.css" />
+        <link rel="stylesheet" href="./css/all.min.css" />
+        <link rel="stylesheet" href="./css/normalize.css" />
+        <link rel="stylesheet" href="./css/main.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -16,6 +16,21 @@
         <title>Task Manager</title>
     </head>
     <body>
-        <script src="script/main.js"></script>
+        <form>
+            <input
+                type="text"
+                name="task"
+                placeholder="Task Name"
+                minlength="1"
+                required
+            />
+            <input type="submit" value="Add Task" />
+        </form>
+        <div class="content">
+            <div class="tasks" id="todo"></div>
+            <div class="tasks" id="doing"></div>
+            <div class="tasks" id="done"></div>
+        </div>
+        <script src="js/main.js"></script>
     </body>
 </html>
