Changed the page structures, Added shake animation when container is empty (no tasks).

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input type="submit" value="Add Task" />
         </form>
         <div class="content">
-            <details class="tasks" id="todo">
+            <details class="category" id="todo">
                 <summary>
                     <div>
                         <i class="fa-solid fa-caret-right"></i>
@@ -35,8 +35,9 @@
                     </div>
                     <span></span>
                 </summary>
+                <div class="tasks"></div>
             </details>
-            <details class="tasks" id="doing">
+            <details class="category" id="doing">
                 <summary>
                     <div>
                         <i class="fa-solid fa-caret-right"></i>
@@ -44,8 +45,9 @@
                     </div>
                     <span></span>
                 </summary>
+                <div class="tasks"></div>
             </details>
-            <details class="tasks" id="done">
+            <details class="category" id="done">
                 <summary>
                     <div>
                         <i class="fa-solid fa-caret-right"></i>
@@ -53,6 +55,7 @@
                     </div>
                     <span></span>
                 </summary>
+                <div class="tasks"></div>
             </details>
         </div>
         <script src="js/main.js"></script>
